--- a/src/main/resources/scss/PF2e-Plus/plus-pages/pf2e-book.css
+++ b/src/main/resources/scss/PF2e-Plus/plus-pages/pf2e-book.css
@@ -37,59 +37,55 @@ root {
 .pf2e-book:not(.callout, .admonition, .callout *, .admonition *) {
   /*! styles for .pf2e-book that is not .callout or .admonition and their children */
 }
-
 .pf2e-book:not(.callout, .admonition, .callout *, .admonition *) .HyperMD-header .cm-header-1, .pf2e-book:not(.callout, .admonition, .callout *, .admonition *) h1 {
   font-family: "Gill Sans", "Gill Sans MT", Calibri, sans-serif;
   font-size: 24px;
   font-style: normal;
-  font-weight: 400;
   font-variant: small-caps;
+  font-weight: 400;
   line-height: 24px;
   text-transform: uppercase;
 }
-
 .pf2e-book:not(.callout, .admonition, .callout *, .admonition *) .HyperMD-header .cm-header-2, .pf2e-book:not(.callout, .admonition, .callout *, .admonition *) h2 {
   font-family: "Gill Sans", "Gill Sans MT", Calibri, sans-serif;
   font-size: 21px;
   font-style: normal;
-  font-weight: 400;
   font-variant: small-caps;
+  font-weight: 400;
   line-height: 24px;
   text-transform: uppercase;
 }
-
 .pf2e-book:not(.callout, .admonition, .callout *, .admonition *) .HyperMD-header .cm-header-3, .pf2e-book:not(.callout, .admonition, .callout *, .admonition *) h3 {
   font-family: "Gill Sans", "Gill Sans MT", Calibri, sans-serif;
   font-size: 19px;
   font-style: normal;
-  font-weight: 700;
   font-variant: normal;
+  font-weight: 700;
   line-height: 24px;
   text-transform: uppercase;
 }
-
 .pf2e-book:not(.callout, .admonition, .callout *, .admonition *) .cm-line, .pf2e-book:not(.callout, .admonition, .callout *, .admonition *) p {
   font-family: "Gill Sans", "Gill Sans MT", Calibri, sans-serif;
   font-size: 16px;
-  font-weight: 400;
   font-variant: small-caps;
+  font-weight: 400;
   line-height: 24px;
 }
-
 .pf2e-book:not(.callout, .admonition, .callout *, .admonition *) blockquote {
   font-family: "Gill Sans", "Gill Sans MT", Calibri, sans-serif;
   font-size: 19px;
   font-style: oblique;
-  font-weight: 400;
   font-variant: normal;
+  font-weight: 400;
   line-height: 24px;
 }
-
 .pf2e-book:not(.callout, .admonition, .callout *, .admonition *) pre {
   font-family: "Gill Sans", "Gill Sans MT", Calibri, sans-serif;
   font-size: 12px;
   font-style: italic;
-  font-weight: 700;
   font-variant: small-caps;
+  font-weight: 700;
   line-height: 24px;
 }
+
+/*# sourceMappingURL=pf2e-book.css.map */
